[package]
name = "vmove"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
colored = "2.0.0"
difference = "2.0.0"
once_cell = "1.7.2"
serde = { version = "1.0.124", default-features = false }
serde_yaml = "0.8.17"
clap = { version = "3.1.8", features = ["derive"] }
tempfile = "3.2.0"
walkdir = "2.3.1"
codespan-reporting = "0.11.1"
itertools = "0.10.0"
serde_json = "1.0"
toml_edit =  { version = "0.14.3", features = ["easy"] }
reqwest = { version = "0.11.1", features = ["blocking", "json"] }

bcs.workspace = true

move-bytecode-verifier = { path = "../../move-bytecode-verifier" }
move-disassembler = { path = "../move-disassembler" }
move-docgen = { path = "../../move-prover/move-docgen" }
move-command-line-common = { path = "../../move-command-line-common" }
move-bytecode-utils = { path = "../move-bytecode-utils" }
move-coverage = { path = "../move-coverage" }
move-core-types = { path = "../../move-core/types" }
move-ir-types = { path = "../../move-ir/types" }
move-compiler = { path = "../../move-compiler" }
move-stdlib = { path = "../../move-stdlib", features = ["testing"] }
move-table-extension = { path = "../../extensions/move-table-extension", optional = true }
move-symbol-pool = { path = "../../move-symbol-pool" }
move-vm-types = { path = "../../move-vm/types" }
move-vm-runtime = { path = "../../move-vm/runtime", features = ["debugging"] }
move-vm-test-utils = { path = "../../move-vm/test-utils" }
read-write-set = { path = "../read-write-set" }
read-write-set-dynamic = { path = "../read-write-set/dynamic" }
move-resource-viewer = { path = "../move-resource-viewer" }
move-binary-format = { path = "../../move-binary-format" }
move-package = { path = "../move-package" }
move-prover = { path = "../../move-prover" }
move-unit-test = { path = "../move-unit-test" }
move-errmapgen = { path = "../../move-prover/move-errmapgen" }
move-bytecode-source-map = { path = "../../move-ir-compiler/move-bytecode-source-map" }
move-bytecode-viewer = { path = "../move-bytecode-viewer" }


[features]
evm-backend = ["move-unit-test/evm-backend", "move-package/evm-backend"]
address20 = ["move-stdlib/address20"]
address32 = ["move-stdlib/address32"]
table-extension = ["move-table-extension", "move-unit-test/table-extension"]


